# circleci-workflow

./: README.md  setup.cfg
.circleci/: config.yml
src/circle_workflow/: code.py
src/circle_workflow.egg-info/: PKG-INFO  SOURCES.txt
tests/integration/: test_integration.py
tests/super_long_tests/: test_long.py
tests/unit/: test_code.py
