
[metadata]
name = circle_workflow
description = A small example package to test circle workflow
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = 0.0.1

[options]
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
